--- a/index.html
+++ b/index.html
@@ -306,19 +306,21 @@
                         MASTERCLASS FOR BUSINESS
                     </h1>
                     <!--| ----------------------- |-->
-                    <h6>
+                    <p>
                         Group rates (10-30% off) are available with the purchase of 20 or more annual memberships
-                    </h6>
+                    </p>
 
                     <!--| ----------------------- |-->
 
-                    <div>
+                    <div id="ultimo_div_botones">
 
-                        <input type="button">
-                        <a href="">
+                        <button id="ultimo_boton">
+                            <span>GET A QUOTE</span>
+                        </button>
+                        <p>
                             Learn more
                             <span>-></span>
-                        </a>
+                        </p>
 
                     </div>
                     <!--| ----------------------- |-->
@@ -344,7 +346,7 @@
 
         <!--| --------------------------------------------------------- |-->
 
-        <footer class="secciones" class="espaciado">
+        <footer class="espaciado">
             
 
 
