Pagina casia totalmente terminada, solo falta agregar iconos y algunas fuentes

--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
     <header>
 
 
-        <nav>
+        <nav id="navegador">
 
             <div id="contenedor_nav">
             <!--| ----------------------------- |-->
 
+
                 <div class="elementos_nav">
 
                     <!--| ----------------------- |-->
-                    <img src="imagenes/logo.jpg" alt="">
+                    <img id="logo_masterclass" src="imagenes/logo.jpg" alt="">
                     <!--| ----------------------- |-->
 
                 </div>
 
                 <!--| ---------------------------------------- |-->
 
-                <div class="elementos_nav">
+                <div class="elementos_nav" id="elemento_nav_principal">
 
                     <!--| ----------------------- |-->
                     <h1>
@@ -63,7 +64,7 @@
 
                 <!--| ---------------------------------------- |-->
 
-                <div class="elementos_nav">
+                <div class="elementos_nav" id="elemento_nav_iniciar_sesion">
 
                     <!--| ----------------------- |-->
                     <h1>
@@ -89,13 +90,13 @@
         <!--| ------------------------- PUBLICIDAD BANNER ------------------------- |-->
 
 
-        <section class="espaciado">
+        <section  id="section_publicidad">
             <div id="publicidad">
                 <h1>
                     2 MEMBERSHIPS FOR THE PRICE OF 1.
                 </h1>
-                <span>boton</span>
-                <span>X</span>
+                <!--<span>boton</span>
+                <span>X</span>-->
             </div>
         </section>
 
@@ -546,6 +547,9 @@
 
             <!--| ----------------------- |-->
             </div>
+
+
+            <p class="firma">Copia hecha por Yeison Cordoba 2021</p>
             
 
         </footer>
