Página principal terminada sin iconos svg; antes de hacer la otra

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
 
 
-        <!--| -----------------PORTADA----------------- |-->
+        <!--| ------------------------------ PORTADA ------------------------------ |-->
 
 
         <section id="contenedor_portada" class="espaciado">
@@ -204,7 +204,7 @@
     <main>
 
 
-        <!--| ------------------------- MASCAS-PATROCINADORES ------------------------- |-->
+        <!--| ----------------------- MASCAS-PATROCINADORES ----------------------- |-->
 
 
         <section id="section" class="espaciado">
@@ -221,7 +221,7 @@
         </section>
 
 
-        <!--| ------------------------- PERSONA DESTACADA ------------------------- |-->
+        <!--| -------------------------- PERSONA DESTACADA -------------------------- |-->
 
 
         <section class="espaciado">
@@ -258,7 +258,7 @@
         </section>
 
 
-        <!--| ------------------------- OTRAS CLASES ------------------------- |-->
+        <!--| ------------------------------ OTRAS CLASES ------------------------------ |-->
 
 
         <section class="espaciado">
@@ -342,7 +342,7 @@
         </section>
 
 
-        <!--| ------------------------- ULTIMA SECCION ------------------------- |-->
+        <!--| ----------------------------- ULTIMA SECCION ----------------------------- |-->
 
 
         <section class="espaciado" id="section_gris">
@@ -398,7 +398,7 @@
         </section>
 
 
-        <!--| ------------------------- FOOTER ------------------------- |-->
+        <!--| ------------------------------- FOOTER ------------------------------- |-->
 
 
         <footer class="espaciado">
