--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                         <!--| ----------------------- |-->
 
-                        <button class="boton_iniciar_sesion">
+                        <button class="boton_iniciar_sesion" onclick="location.href='pagina2.html'">
                             <span>SIGN UP</span>
                         </button>
 
