Terminé la portada de la segunda pagina

--- a/pagina2.html
+++ b/pagina2.html
@@ -20,7 +20,7 @@
         <nav>
 
 
-            <div class="nav-div_contenedor_nav">
+            <div class="nav_contenedor">
 
 
                 <div>
@@ -62,13 +62,13 @@
         <!--| ----------------------------------- |-->
 
 
-        <div id="portada" class="contenedor">
+        <div id="portada" class="contenedor-portada">
 
 
             <!--|La imagen va de fondo, los elementos están alineados en flex row end|-->
-            <img src="St Vincent/Imagenes/Portada St Vincent.jpg" alt="Foto St. Vincent">
+            <!--<img src="St Vincent/Imagenes/Portada St Vincent.jpg" alt="Foto St. Vincent">-->
             <!--| ----------------------- |-->
-            <div class="portada_div_contenedor_titulos">
+            <div class="portada_contenedor_titulos">
 
 
                 <div>
@@ -104,7 +104,7 @@
 
             <!--| ----------------------------------- |-->
 
-            <div class="portada_div_contenedor_botones">
+            <div class="portada_contenedor_botones">
 
 
                 <div>
@@ -196,7 +196,7 @@
         <nav>
 
     
-            <div class="main_nav_contenedor">
+            <div class="main-nav_contenedor">
 
 
                 <div>
@@ -236,7 +236,7 @@
         <section class="section">
 
 
-            <div id="clases_div_contenedor">
+            <div class="clases_contenedor">
 
 
                 <div>
