Hice toda la estructura de la primera sección de clases

--- a/pagina2.html
+++ b/pagina2.html
@@ -291,7 +291,7 @@
 
                     <!--| ----------------------------------- |-->
 
-                    <div>
+                    <div class="clases-contenedor_menu_derecha">
 
 
                         <div>
@@ -323,69 +323,88 @@
 
                             <p class="texto_blanco">Browse Lesson Plan</p>
                             <!--| ----------------------- |-->
-                            <div class="contenedor_redondeado_gris">
+                            <div>
 
-                            <!-- |Cubrir los p con divs| -->
-                                <p class="texto_blanco">
-                                    <span>1.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>1.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>2.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>2.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>3.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>3.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>4.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>4.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>5.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>5.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>6.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>6.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>7.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>7.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>8.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>8.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
                                 <!--| ----------------------- |-->
-                                <p class="texto_blanco">
-                                    <span>9.</span>
-                                    Meet Your Instructor:St. Vincent a.k.a. Annie ...
-                                    <span>V</span>
-                                </p>
+                                <div>
+                                    <p class="texto_blanco">
+                                        <span>9.</span>
+                                        Meet Your Instructor:St. Vincent a.k.a. Annie ...
+                                        <span>V</span>
+                                    </p>
+                                </div>
+
 
 
                             </div>
 
                             <!--| ----------------------- |-->
 
-                            <div>
+                            <div class="siguiente-clase">
 
 
                                 <div>
@@ -408,17 +427,7 @@
                                         <!--| ----------------------- |-->
                                         <p class="texto_blanco"><span>Alicia Keys</span></p>
                                         <!--| ----------------------- |-->
-                                        <p class="texto_gris_claro">Teaches Songwriting and Producing</p>
-
-
-                                    </div>
-
-                                    <!--| ----------------------------------- |-->
-
-                                    <div>
-
-
-                                        <span>-></span>
+                                        <p class="texto_gris_claro">Teaches Being a Band</p>
 
 
                                     </div>
@@ -426,6 +435,15 @@
 
                                 </div>
 
+                                <!--| ----------------------- |-->
+
+                                <div>
+
+
+                                    <span>-></span>
+
+
+                                </div>
 
                             </div>
 
