--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <!--| ----------------------- |-->
 
                         <button class="boton_iniciar_sesion" onclick="location.href='pagina2.html'">
-                            <span>SIGN UP</span>
+                            <span>CLICK ACÁ</span>
                         </button>
 
                         <!--| ----------------------- |-->
